[ci skip] Update translations (Chinese Simplified)

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -187,13 +187,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="start_on_bottom_when_loading_document">载入文件时将光标置于文件末尾处</string>
     <string name="unordered_list_character">无序列表标示字符</string>
     <string name="character_to_start_items_of_unordered_list_with">用于表示无序列表的字符</string>
-    <string name="unordered_list_char_dash">连词符 (-)</string>
+    <string name="unordered_list_char_dash">短破折号 (-)</string>
     <string name="unordered_list_char_asterisk">星号 (*)</string>
     <string name="unordered_list_char_plus">加号 (+)</string>
-    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor 只能编辑本地、脱机可用的文档，不支持不提供完整文件路径的文件管理器。</string>
-    <string name="sync_to_local_folder_notice">注意：同步应用可能会将文件放置在自定义文件夹中，相应地更改 Markor 的文档文件夹或在另一个文件管理器中打开它们。</string>
-    <string name="configure_in_the_apps_settings">在应用设置中设定</string>
-    <string name="vertical_alignment">纵向对齐</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor 只能编辑本地、离线可用的文档，且不支持不提供完整文件路径的文件管理器。</string>
+    <string name="sync_to_local_folder_notice">注意：同步应用可能会将文件放置在自定义文件夹中，请相应地更改 Markor 的文档文件夹或在另一个文件管理器中打开它们。</string>
+    <string name="configure_in_the_apps_settings">在应用设置中配置</string>
+    <string name="vertical_alignment">垂直对齐</string>
     <string name="horizontal_alignment">水平对齐</string>
     <string name="default_">默认</string>
     <string name="left">左端</string>
@@ -207,17 +207,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="edit_text_in_center_of_screen">在屏幕中央编辑文本</string>
     <string name="clipboard">剪切板</string>
     <string name="select_existing_document">选择已有文档</string>
-    <string name="open_source_licenses">开源协议</string>
+    <string name="open_source_licenses">开源许可协议</string>
     <string name="rate_this_app">评价本应用</string>
     <string name="translate">翻译</string>
     <string name="more_info_and_help">更多信息与帮助</string>
     <string name="report_bugs">报告错误</string>
-    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">有关向开发人员捐款或为此项目贡献的更多信息。</string>
+    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">查看有关捐赠给开发人员或为此项目做出贡献的更多信息。</string>
     <string name="join_community">加入社区</string>
-    <string name="bug_reports_suggest_improvements">给出反馈，报告问题，或提出改进建议</string>
-    <string name="help_translating_this_app">翻译本应用</string>
+    <string name="bug_reports_suggest_improvements">反馈、报告问题或提出改进建议</string>
+    <string name="help_translating_this_app">将此应用翻译成其他语言</string>
     <string name="source_code">源代码</string>
-    <string name="project_license">项目开源协议</string>
+    <string name="project_license">项目许可协议</string>
     <string name="contribute_code_to_this_project_anybody_welcome">为本项目贡献代码。我们欢迎所有人参与进来，包括新手</string>
     <string name="project_team">项目团队</string>
     <string name="contributors_public_add_yourself_description">显示贡献者信息。贡献者可自行选择是否被添加到这里。</string>
@@ -228,13 +228,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="location">位置</string>
     <string name="text_lines">文本行数</string>
     <string name="text_characters">文字符号</string>
-    <string name="text_words">文字</string>
+    <string name="text_words">文字词</string>
     <string name="directory">目录</string>
     <string name="recently_viewed_documents">最近文档</string>
     <string name="details">细节</string>
     <string name="calendar">日历</string>
-    <string name="warning_disallowed_sd_access">警告！Markor 没有保存此文件的权限, 此处的所有更改都将丢失。Markor 并不能解决这个问题， 请检查 Android 对 Markor 的权限设置。</string>
-    <string name="error_picture_selection">没有选取照片</string>
+    <string name="warning_disallowed_sd_access">警告！ 应用没有保存此文件的权限，所有更改都将丢失。 无法解决问题或确认某些内容，Android 拒绝此处的任何访问。</string>
+    <string name="error_picture_selection">没有选择、拍摄或保存图片。</string>
     <string name="gallery_picture">从相册选取</string>
     <string name="camera_picture">相机</string>
     <string name="enable_undo_and_redo_be_patient">启用撤消和重做操作。只适合高级使用, 保持耐心不要删除重要的东西。关闭并打开编辑器以清除历史记录。</string>
