[ci skip] Update translations (Japanese)

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -413,8 +413,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">追加のコンテキストとプロジェクト</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">スペースで区切られた @contexts と +projects を入力してください。これらは常に todo.txt のダイアログで表示されます。</string>
     <string name="infinite">Infinite</string>
-    <string name="search_project">プロジェクトを検索</string>
-    <string name="search_context">検索コンテキスト</string>
+    <string name="browse_by_project">プロジェクトで閲覧</string>
+    <string name="browse_by_context">コンテキストで閲覧</string>
     <string name="insert_project">プロジェクトを挿入</string>
     <string name="insert_context">Insert contexts</string>
+    <string name="browse_todo">タスクを参照</string>
+    <string name="browse_by_priority">優先度で参照</string>
+    <string name="browse_by_due_date">期日で参照</string>
+    <string name="due_overdue">期限切れ</string>
+    <string name="due_today">今日が期限</string>
+    <string name="due_future">今後の予定</string>
+    <string name="completed">完了</string>
+    <string name="match_any">どれにでも一致</string>
+    <string name="match_all">すべて一致</string>
 </resources>
